// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.scp.operator.protos.shared.backend.jobnotification;

import "operator/protos/shared/backend/job_status.proto";

option java_multiple_files = true;
option java_outer_classname = "NotificationEventProto";
option java_package = "com.google.scp.operator.protos.shared.backend.jobnotification";

message JobNotificationEvent {
  string job_id = 1;
  google.scp.operators.protos.shared.backend.JobStatus job_status = 2;
  string topic_id = 3;
}
